# wasm-samples

./: README.md  justfile  rust-toolchain.toml
assemblyscript/: justfile  package-lock.json  package.json
assemblyscript/src/: as-hello.ts
call-a-host-function/: Cargo.toml  README.md
call-a-host-function/src/: main.rs
error-prone/: Cargo.toml  README.md
error-prone/src/: main.rs
http-test/: Cargo.toml  manifest.toml
http-test/src/: main.rs
list-files/: Cargo.toml  README.md
list-files/src/: main.rs
loudify/: Cargo.toml  README.md
loudify/src/: main.rs
proc-stats/: Cargo.toml  manifest.toml
proc-stats/src/: common.rs  cpu.rs  io.rs  main.rs  memory.rs  network.rs  sys.rs
ruby-example/: .gitignore  justfile
ruby-example/src/: main.rb
sdk-test/: Cargo.toml  README.md
sdk-test/src/: main.rs
serval-facts/: Cargo.toml  manifest.toml
serval-facts/src/: main.rs
serval-facts/wasi-hello-world/: Cargo.toml
thumbnailer/: Cargo.toml
thumbnailer/src/: main.rs
tract-object-detection/: .gitignore  Cargo.toml  README.md  justfile
tract-object-detection/src/: main.rs
uppercaserizer/: Cargo.toml
uppercaserizer/src/: main.rs
wasi-hello-world/: Cargo.toml
wasienv/: README.md  justfile  wasienv-greet.c
