[package]
name = "tract-object-detection"
version = "0.19.0-pre"
authors = ["Mark Christian <mark@serval.sh>", "Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
image = "0.24.1"
atty = "0.2.14"
tract-tensorflow = { git = "https://github.com/sonos/tract" }
